--- a/Dream/app/src/main/AndroidManifest.xml
+++ b/Dream/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ResumoPacoteActivity"></activity>
+        <activity android:name=".PagamentoActivity"></activity>
+        <activity android:name=".ResumoPacoteActivity" />
         <activity android:name=".PacotesActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
