--- a/Dream/app/src/main/AndroidManifest.xml
+++ b/Dream/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.PagamentoActivity"></activity>
+        <activity android:name=".activity.CompraActivity"></activity>
+        <activity android:name=".activity.PagamentoActivity" />
         <activity android:name=".activity.ResumoPacoteActivity" />
         <activity android:name=".activity.PacotesActivity">
             <intent-filter>
